# CreditRiskAnalysisProject

./: .dockerignore  .gitignore  1.0-ag-initial-data-exploration.ipynb  2.0-ag-features-selection.ipynb  3.0-ag-model-training.ipynb  4.0-ag-model-training-script-use.ipynb  5.0-ag-prediction-example.ipynb  Binary_Processing.ipynb  Categorical_EDA.ipynb  Dockerfile  EDA_LAU.ipynb  EDA_Ustarroz_Numericos.ipynb  Makefile  Project_Organization.md  Project_organization.md  README.md  Readme.md  app.py  appespañol.py  check_classes.py  clientes.csv  clientes_clean.csv  diagrama-draft.excalidraw  docker-compose.yml  generar_clientes.py  logo_intro.css  main.py  mainespañol.py  make_dataset.py  model.pkl  preprocessing.ipynb  pyproject.toml  redis.conf  requirements.txt  settings.py  styles.css  test_request.py  train_model.py
.streamlit/: config.toml
credit_risk_analysis/: __init__.py  config.py  dataset.py  features.py  features__.py  plots.py  preprocessing.py  run_api.sh  utils.py
credit_risk_analysis/EDA/: EDA_Ustarroz_Numericos.ipynb  eda_numerico_scripts.py
data/: Categorical.ipynb  Categorical.py  Categorical_EDA.ipynb  EDA_Mustarroz.ipynb  EDA_varNum.ipynb  download_data.py  split_data.py
docs/: README.md  mkdocs.yml
models/: mlp_model.pkl  preprocessor.pkl  xgb_model.pkl
processing/: process_all_features.py  process_all_features_v2.py  process_categorical_binary.py  process_categorical_multicategorical.py  process_numerical_continuous.py  process_numerical_discrete.py  process_numericas_discretas.py  process_numericas_discrete.py  smote_oversampling.py
(+341 files in other folders)
