[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "credit_risk_analysis"
version = "0.0.1"
description = "The main goal of this project is to deploy a service capable of predicting the credit scored of people based on financial transactional information."
authors = [
  { name = "Squad 3 - Anyone AI" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["credit_risk_analysis"]
force_sort_within_sections = true


